# flink-tuto

./: README.md  docker-compose.yaml  pyproject.toml
src/cybersecurity/: consumer.py  producer.py
src/cybersecurity/generators/: basic.py
src/cybersecurity/notebook/: cybersecurity_atacks.ipynb
src/dummy/: consumer.py  producer.py
